# cloud-info-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/linters/: .markdownlint.json  mlc_config.json
.github/workflows/: check-links.yml  deploy.yaml  docker.yml  lint.yml  python-tests.yaml
app/: conftest.py  glue.py  main.py  test_fixtures.py  test_glue.py  test_main.py
data/: appdb-images.json  vo-disciplines.json
deploy/: cloud-init.yaml  clouds.tf  clouds.yaml  config.yaml  fetch-info.sh  galaxy-requirements.yaml  main.tf  playbook.yaml  site-config.sh
