[project]
name = "cloud-info-api"
version = "0.1.0"
description = "A cloud info API implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "watchfiles>=1.0.4",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
